MacOS BigSur: arm64: crash when running gnuradio
Hello,
I've managed to get gnuradio compiled on MacOS Big Sur. However, whenever I open gnuradio-companion the application crashes with the following backtrace:
Thread 5 Crashed:
0 libgirepository-1.0.1.dylib 0x00000001161ef60c g_callable_info_free_closure + 20
1 _gi.cpython-39-darwin.so 0x000000011608e47c _pygi_invoke_closure_free + 28
2 _gi.cpython-39-darwin.so 0x000000011608e47c _pygi_invoke_closure_free + 28
3 _gi.cpython-39-darwin.so 0x0000000116092178 pygi_marshal_cleanup_args_from_py_marshal_success + 164
4 _gi.cpython-39-darwin.so 0x0000000116090a04 pygi_invoke_c_callable + 2756
5 _gi.cpython-39-darwin.so 0x00000001160914ac pygi_function_cache_invoke + 52
6 _gi.cpython-39-darwin.so 0x0000000116085188 _callable_info_call + 196
7 org.python.python 0x0000000100488f40 _PyObject_MakeTpCall + 308
8 org.python.python 0x0000000100534bc8 call_function + 512
9 org.python.python 0x0000000100532620 _PyEval_EvalFrameDefault + 21700
10 org.python.python 0x0000000100535660 _PyEval_EvalCode + 1932
11 org.python.python 0x000000010048964c _PyFunction_Vectorcall + 244
12 org.python.python 0x000000010048b16c method_vectorcall + 144
13 org.python.python 0x0000000100534b68 call_function + 416
14 org.python.python 0x0000000100532620 _PyEval_EvalFrameDefault + 21700
15 org.python.python 0x0000000100535660 _PyEval_EvalCode + 1932
16 org.python.python 0x000000010048964c _PyFunction_Vectorcall + 244
17 org.python.python 0x0000000100534b68 call_function + 416
18 org.python.python 0x0000000100532620 _PyEval_EvalFrameDefault + 21700
19 org.python.python 0x00000001004896c8 function_code_fastcall + 112
0 libsystem_pthread.dylib 0x00000001a0a73d8c start_wqthread + 0
22 org.python.python 0x00000001004896c8 function_code_fastcall + 112
23 org.python.python 0x0000000100534b68 call_function + 416
24 org.python.python 0x0000000100532604 _PyEval_EvalFrameDefault + 21672
25 org.python.python 0x00000001004896c8 function_code_fastcall + 112
26 org.python.python 0x0000000100534b68 call_function + 416
27 org.python.python 0x0000000100532604 _PyEval_EvalFrameDefault + 21672
28 org.python.python 0x00000001004896c8 function_code_fastcall + 112
29 org.python.python 0x000000010048b1f4 method_vectorcall + 280
30 org.python.python 0x00000001005b1b8c t_bootstrap + 72
31 org.python.python 0x000000010056e600 pythread_wrapper + 28
32 libsystem_pthread.dylib 0x00000001a0a7906c _pthread_start + 320
33 libsystem_pthread.dylib 0x00000001a0a73da0 thread_start + 8
I've also been doing some tracing ant the line of python that seems to cause a crash seems to be:
Gtk.py(1304): Gtk.TreeStore.set_value(self, treeiter, column, value)
albeit in different contexts on different runs:
--- modulename: GObject, funcname: __g_type
GObject.py(214): return _gi._gvalue_get_type(self)
GObject.py(234): if gtype == TYPE_CHAR:
GObject.py(236): elif gtype == TYPE_UCHAR:
GObject.py(238): elif gtype == TYPE_STRING:
GObject.py(239): if not isinstance(py_value, str) and py_value is not None:
GObject.py(242): _gi._gvalue_set(self, py_value)
Gtk.py(1304): Gtk.TreeStore.set_value(self, treeiter, column, value)
--- modulename: reader, funcname: forward
GObject.py(239): if not isinstance(py_value, str) and py_value is not None:
reader.py(100): if self.pointer+length+1 >= len(self.buffer):
GObject.py(242): _gi._gvalue_set(self, py_value)
reader.py(102): while length:
Gtk.py(1304): Gtk.TreeStore.set_value(self, treeiter, column, value)
If there is anything more I can do to help, please let me know!